// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="c-x0iku9 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cmm97dk soui-radio-indicator-wrapper"
  >
    <span
      class="cclk2uz soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="ckwqdut soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c8yl1wr soui-radio-group c-c97air soui-radio-group-button crzo5ba soui-button-group"
  dir="ltr"
>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked c-vk6maf soui-button-primary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c8yl1wr soui-radio-group c-c97air soui-radio-group-button crzo5ba soui-button-group"
  dir="ltr"
>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked c-vk6maf soui-button-primary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cqdpa09 soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-pj1pid soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c8yl1wr soui-radio-group c-c97air soui-radio-group-button crzo5ba soui-button-group"
    dir="ltr"
  >
    <button
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked c-vk6maf soui-button-primary cd0yd2j soui-button-button cs666we soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cs666we soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cs666we soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c8yl1wr soui-radio-group c-c97air soui-radio-group-button crzo5ba soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c8yl1wr soui-radio-group c-c97air soui-radio-group-button crzo5ba soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked c-vk6maf soui-button-primary cd0yd2j soui-button-button cs24bdu soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cs24bdu soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-x0iku9 soui-radio-wrapper chcg5ej soui-button-secondary cd0yd2j soui-button-button cs24bdu soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="c-x0iku9 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="cmm97dk soui-radio-indicator-wrapper"
  >
    <span
      class="cclk2uz soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="ckwqdut soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
